Grid footer has extra padding in exported PDF document when scrolling is enabled. Fixes#4780

--- a/styles/web/common/grid.less
+++ b/styles/web/common/grid.less
@@ -926,8 +926,9 @@ html .k-grid-edit-row .k-tooltip
 }
 
 /* Remove empty space reserved above the scrollbar */
-.k-pdf-export-shadow .k-grid-header {
-    padding-right: 0 !important;
+.k-pdf-export-shadow .k-grid-header,
+.k-pdf-export-shadow .k-grid-footer {
+    padding: 0 !important;
 }
 
 .k-loading-pdf-mask {
